--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="subheading mb-5">(+92) 342 0585812. 
           <a href="a.jawad321@gmail.com">a.jawad321@gmail.com</a>
         </div>
-        <p class="lead mb-5">This is Mian Jawad Ahmad, I am founder of TechStitching and President at <a href=" https://computercell.github.io/">Computer Cell</a>. I have over 3 years’ experience as a React Native Developer and 1 year experience as a Full-Stack Web Developer.I am a computer scientist by profession an entrepreneur by passion.</p>
+        <p class="lead mb-5">This is Mian Jawad Ahmad, I am founder of TechStitching and President at <a href=" https://computercell.github.io/">Computer Cell</a>. I have over 3 years’ experience as a React Native Developer and 1 year experience as a Full-Stack Web Developer.I am a computer scientist by profession and entrepreneur by passion.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mianjawadahmad/">
             <i class="fab fa-linkedin-in"></i>
