--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
           <a href="https://www.facebook.com/mainjawadahmad1">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#">
+          <a href="https://medium.com/@MianJawadAhmad">
             <i class="fab fa-medium-m"></i> 
           </a>
-          <a href="#">
+          <a href="https://www.pinterest.com/MianJawadAhmad1/">
             <i class="fab fa-pinterest"></i> 
           </a>
         </div>
@@ -251,22 +251,21 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            #</li>
+            Front-End Web Development with React Course Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            #</li>
+            Front-End Web UI Frameworks and Tools: Bootstrap 4 Course Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            #</li>
+            Multiple Mobile Application Development with React Native Course Certificate</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             #</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
-            #</li>
+            #</li> -->
         </ul>
       </div>
     </section>
