--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Front-End Web Development with React Course Certificate</li>
+            Front-End Web Development with React coursera Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Front-End Web UI Frameworks and Tools: Bootstrap 4 Course Certificate</li>
+            Front-End Web UI Frameworks and Tools: Bootstrap 4 coursera Certificate</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Multiple Mobile Application Development with React Native Course Certificate</li>
+            Multiple Mobile Application Development with React Native coursera Certificate</li>
           <li>
             <!-- <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
