--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Founder, CEO and Senior React Native Developer</h3>
+            <h3 class="mb-0">Founder and CEO</h3>
             <div class="subheading mb-3">TechStitching</div>
             <p>.</p>
           </div>
@@ -113,7 +113,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior React Native Developer and Full-Stack Web Developer</h3>
+            <h3 class="mb-0">React Native Developer</h3>
             <div class="subheading mb-3">DotCom Services</div>
             <p></p>
           </div>
