--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             Multiple Mobile Application Development with React Native coursera Certificate</li>
           <li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Github Campus Advisor</li>
+          <li>
             <!-- <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             #</li>
