--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         </h1>
         <div class="subheading mb-5">(+92) 342 0585812. 
-          <a href="a.jawad321@gmail.com">a.jawad321@gmail.com</a>
+          <a href="mianjawadahmad@encoderbytes.com">mianjawadahmad@encoderbytes.com</a>
         </div>
         <p class="lead mb-5">This is Mian Jawad Ahmad, I am founder of EncoderBytes and President at <a href=" https://computercell.github.io/">Computer Cell</a>. I have over 2 years’ experience as a React Native Developer. I am a computer scientist by profession and entrepreneur by passion.</p>
         <div class="social-icons">
