--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
             <span class="text-primary">Aug 2020 - Aug 2022</span>
           </div>
         </div>
-
-          
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of Engineering and Technology Peshawar</h3>
             <div class="subheading mb-3">BS Computer</div>
