--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:m.ahsankhan26@hotmail.com">a.jawad321@gmail.com</a></p>
+							<p><a href="mailto:m.jawad@encoderbytes.com">jawad@encoderbytes.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -551,7 +551,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a>mianjawad.com</a></p>
+							<p><a>https://mianjawadahmad.github.io</a></p>
 						</div>
 					</div>
 				</div>
