--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:m.jawad@encoderbytes.com">jawad@encoderbytes.com</a></p>
+							<p><a href="mailto:jawad@encoderbytes.com">jawad@encoderbytes.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -631,9 +631,9 @@
 							<ul>
 								<li><a><span class="icon icon-phone"></span><span class="text">+92-342-0585812
 										</span></a></li>
-								<li><a href="mailto:m.ahsankhan26@hotmail.com"><span
+								<li><a href="mailto:jawad@encoderbytes.com"><span
 											class="icon icon-envelope"></span><span
-											class="text">a.jawad321@gmail.com</span></a></li>
+											class="text">jawad@encoderbytes.com</span></a></li>
 							</ul>
 						</div>
 					</div>
