--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span><span>Mian Jawad Ahmed</span></li>
 								<li class="d-flex"><span>Email:</span><span
-										style="font-size: 14px">a.jawad321@gmail.com</span></li>
+										style="font-size: 14px">jawad@encoderbytes.com</span></li>
 								<li class="d-flex"><span>Phone:</span><span>+92-342-0585812</span></li>
 								<li class="d-flex"><span>Country:</span> <span>Pakistan</span></li>
 								<li class="d-flex"><span>City:</span><span>Peshawar</span></li>
